argo/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31112
  selector: 
    tier: frontend
