argo/infra.yaml
apiVersion: v1
kind: Service
metadata:
  name: reca1team-web-server
  labels:
    app: web-server
spec:
  type: NodePort
  selector:
    app: web-server
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: reca1team-web-server
          image: 447079561480.dkr.ecr.ap-northeast-2.amazonaws.com/reca1team-ecr-repo:frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: reca1team-was-server
  labels:
    app: was-server
spec:
  type: ClusterIP
  selector:
    app: was-server
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: was-server
  template:
    metadata:
      labels:
        app: was-server
    spec:
      containers:
      - name: reca1team-was-server
        image: 447079561480.dkr.ecr.ap-northeast-2.amazonaws.com/reca1team-ecr-repo:backend-v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
